# comicif-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test.http
apps/backgrounds/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/photo_processing/: apps.py  services.py  urls.py  views.py
apps/poses/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
