[project]
name = "comicif-backend"
version = "0.1.0"
description = "Django backend for comic-style photo processing with background replacement"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=23.0.0",
    "numpy>=1.26.4",
    "pillow>=11.3.0",
    "rembg>=2.0.67",
]
