[tool.poetry]
name = "comicif-backend"
version = "0.1.0"
description = "Django backend for comic-style photo processing with background replacement"
readme = "README.md"
authors = ["Eduardo M. Rezende"]
packages = [{include = "apps"}, {include = "config"}]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
asgiref = "^3.9.1"
django = "^5.2.5"
django-cors-headers = "^4.7.0"
djangorestframework = "^3.16.1"
gunicorn = "^23.0.0"
numpy = "^1.26.4"
onnxruntime = "^1.22.1"
opencv-python = "^4.11.0.86"
pillow = "^11.3.0"
pymatting = "^1.1.14"
rembg = "^2.0.67"
requests = "^2.32.5"
sqlparse = "^0.5.3"
urllib3 = "^2.5.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
